[package]
name = "vwap"
version = "0.1.0"
edition = "2024"

[dependencies]
longport = "3.0.5"
time = { version = "0.3", features = ["macros"] }
axum = { version = "0.7", features = ["json", "query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"