[package]
name = "trading"
version = "0.1.0"
edition = "2024"

[dependencies]
longport = "3.0.5"
dotenv = "0.15"
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
tracing-subscriber = "0.3"
lettre = "0.11"
time = { version = "0.3", features = ["macros"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
axum = { version = "0.7", features = ["json", "query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
openssl = { version = "0.10", features = ["vendored"] }